fix alignment

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -591,7 +591,7 @@ article {
 }
 .entry-header .entry-date {
 	position: absolute;	
-	bottom: 0;
+	bottom: 1px;
 	left: 0;
 }
 .entry-date a,
