--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -153,7 +153,7 @@ article {
 }
 .entry-header .entry-date {
 	position: absolute;	
-	bottom: 0;
+	bottom: 1px;
 	left: 0;
 }
 .entry-date a,
